live-prop-test-macros/tests/compile_fail/old_multiple_arguments.stderr
error: `old` can only have one "argument"
 --> $DIR/old_multiple_arguments.rs:3:34
  |
3 | #[live_prop_test(postcondition = "old(true, true)")]
  |                                  ^^^^^^^^^^^^^^^^^
